# listen-cli

./: .gitignore  AGENTS.md  MANIFEST.in  PROJECT_HANDOFF.md  README.md  listen-cli-blessed.py  listen-cli-buffer.py  listen-cli-curses-fixed.py  listen-cli-curses-voice-fixed.py  listen-cli-curses-voice.py  listen-cli-curses.py  listen-cli-invisible.py  listen-cli-regions.py  listen-cli-scrollable.py  listen-cli-simple.py  listen-cli-smooth.py  listen-cli-typing.py  listen-cli.py  listen.sh  plans.md  pyproject.toml  test_curses.sh  voice_final.py  voice_wrap.py
listen_cli/: __main__.py  asr.py  audio.py  main.py  orchestration.py  setup.py
listen_cli/engines/: __init__.py  assemblyai.py  base.py  sherpa_onnx.py
old/: README-CURSES.md  README.md  listen-cli-curses-voice-fixed.py  listen-stt-daemon.py  pyproject.toml  sttctl
sherpa/: requirements.txt
sherpa/src/: mic_demo.py
