[tool.poetry]
name = "voice-ptt-wrapper"
version = "0.1.0"
description = "Voice PTT wrapper for Claude Code / Codex"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
websockets = ">=12.0"
sounddevice = ">=0.4.6"
numpy = ">=1.26.0"
rapidfuzz = ">=3.6.1"
rich = ">=13.7.0"
assemblyai = {extras = ["extras"], version = "^0.43.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
